@@ -7,6 +7,7 @@ import top.gregtao.concerto.ConcertoClient;
 import top.gregtao.concerto.api.CacheableMusic;
 import top.gregtao.concerto.api.LazyLoadable;
 import top.gregtao.concerto.api.MusicJsonParsers;
+import top.gregtao.concerto.music.SharedMusic;
 import top.gregtao.concerto.music.lyrics.Lyrics;
 import top.gregtao.concerto.music.meta.music.MusicMetaData;
 import top.gregtao.concerto.enums.OrderType;
@@ -141,11 +142,11 @@ public class MusicPlayerHandler {
     private void removeMusic(int size) {
         if (this.orderType == OrderType.REVERSED) {
             while (size-- > 0) {
-                this.musicList.removeLast();
+                this.musicList.remove(this.musicList.size() - 1);
             }
         } else {
             while (size-- > 0) {
-                this.musicList.removeFirst();
+                this.musicList.remove(0);
             }
         }
     }
@@ -153,7 +154,8 @@ public class MusicPlayerHandler {
     public void updateDisplayTexts() {
         if (this.currentMeta != null) {
             this.displayTexts[2] = TextUtil.cutIfTooLong(this.currentMeta.title(), 50) + " | " +
-                    TextUtil.cutIfTooLong(this.currentMeta.author(), 40) + " | " + this.currentMeta.getSource();
+                    TextUtil.cutIfTooLong(this.currentMeta.author(), 40) + " | " + this.currentMeta.getSource() +
+                    (this.currentMusic instanceof SharedMusic ? ", " + Text.translatable("concerto.room").getString() : "");
             MusicTimestamp timestamp = this.currentMeta.getDuration();
             this.timeFormat = "%s" + (timestamp == null ? "" : " ".repeat(30) + this.currentMeta.getDuration().toShortString());
         } else {
